Fixed site header styling on narrow screens

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -36,9 +36,10 @@ abbr {
 }
 #header .title {
 	vertical-align: middle;
-	margin: -28px 0 0 7px;
+	margin-left: 7px;
 	font-size: 1.2em;
 	display: inline-block;
+	padding-top: 5px;
 }
 #header .about {
 	display: inline-block;
